fixed alignment and margins of global buttons to match designs

--- a/app/common/styles/base/buttons.scss
+++ b/app/common/styles/base/buttons.scss
@@ -98,7 +98,7 @@ button, .button, .submit {
     content: '';
     position: absolute;
     left: 0;
-    top: 3px;
+    top: 0px;
     width: 25px;
     height: 20px;
     display: inline-block;
@@ -114,6 +114,6 @@ button, .button, .submit {
     vertical-align: middle;
     display: inline-block;
     left: 11px;
-    top: 4px;
+    top: 0px;
   }
 }
